unpackaged/main/default/objects/sked_DCR_Field__c/fields/sked_Drive_Generation_Flag__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Generation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drive Generation Flag</label>
    <type>Checkbox</type>
</CustomField>