unpackaged/main/default/objects/sked_DCR_Field__c/fields/sked_Editable__c.field-meta.xml
<CustomField>
    <fullName>sked_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>