unpackaged/main/default/objects/sked_DCR_Field__c/fields/sked_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>sked_Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>