unpackaged/main/default/objects/sked_DCR_Field__c/fields/sked_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>