unpackaged/main/default/objects/sked_DCR_Field__c/fields/sked_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>